src/objects/Sap_Basic_Auth_Webservice__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SAP Fit Kit webservice used in apex to call out.</description>
    <fields>
        <fullName>authorization_header__c</fullName>
        <description>Authorization header value is used in the header of the request. Generally this value is the base64 encoded value of the username and password joined by a single colon ie username:password.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>authorization header</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endpoint_url__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>endpoint_url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>password</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>username</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>SAP Basic Auth Webservice</label>
</CustomObject>